syntax="proto3";
package pb;
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  // 默认值 ？
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}